...
                        
                        Spacer()
                    }
                    .padding(.top)
                }
            }
            .navigationTitle("Add Food")
        }
    }
}

struct FoodSearchResultRow: View {
    let food: USDAFood
...
